deployment-example/extra/rwx-pvc-pv-pod.yml
---
kind: Pod
apiVersion: v1
metadata:
  name: rwx-mount-pod-1
spec:
  containers:
    - name: mount-pod
      image: busybox
      command:
        - "/bin/sh"
      args:
        - "-c"
        - "touch /mnt/SUCCESS; while :; do sleep 3600; done"
      volumeMounts:
        - name: pvc
          mountPath: "/mnt/"
  restartPolicy: "Never"
  volumes:
    - name: pvc
      persistentVolumeClaim:
        claimName: rwx-pvc
---
kind: Pod
apiVersion: v1
metadata:
  name: rwx-mount-pod-2
spec:
  containers:
    - name: mount-pod
      image: busybox
      command:
        - "/bin/sh"
      args:
        - "-c"
        - "touch /mnt/SUCCESS; while :; do sleep 3600; done"
      volumeMounts:
        - name: pvc
          mountPath: "/mnt/"
  restartPolicy: "Never"
  volumes:
    - name: pvc
      persistentVolumeClaim:
        claimName: rwx-pvc
